--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -7,14 +7,14 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # 
 
-name: OpenWrt-CI
+name: 生态城
 
 on:
-    #schedule:
-       #– cron: 0 20 * * *
-   # push:
-        #branches:
-           – master
+  schedule:
+    – cron: 0 20 * * *
+  push:
+    branches:
+      – master
 
 jobs:
   build:
